--- a/regex.html
+++ b/regex.html
@@ -13,11 +13,14 @@
 <p>I am a Stay at Home Mom with a background in Tech Support. Interested in modification projects for Kano and Robomow, as well as Front-end web design.</p>
 
 </div>
+<div class='row col-md-8 col-md-offset-2'>
   <button class='fAndR'> Find and replace a word </button>
     <span class='response'></span>
-    <br>
-    <button class='isThere'> Does text include this character? </button>
+    </div>
+    <div class='row col-md-8 col-md-offset-2'>
+    <button class='isThere'> Which vowels have you used? </button>
     <span class='response2'></span>
+    </div>
 </div>
 <div class='container col-md-8 col-md-offset-2'>
 <p>  Back to <a href="http://leahw.github.io/">leahw.github.io</a></p>
@@ -36,8 +39,12 @@ $('.fAndR').on('click', function() {
 });
 $('.isThere').on('click', function(patt) {
     var text2 = prompt('Please enter some text!')
+    var response1 = /a/.exec(text2);
     var response2 = /e/.exec(text2);
-  $('.response2').append(response2);
+    var response3 = /i/.exec(text2);
+    var response4 = /o/.exec(text2);
+    var response5 = /u/.exec(text2);
+  $('.response2').append(response1, response2, response3, response4, response5);
 });
 </script>
 </body>
