--- a/regex.html
+++ b/regex.html
@@ -13,7 +13,7 @@
 <div class='container well col-md-8 col-md-offset-2 paragraph'>
 <p class='lead'>Sample text:</p>
 <br>
-<p>I am a Stay at Home Mom with a background in Tech Support. Interested in modification projects for Kano and Robomow, as well as Front-end web design.</p>
+<p>I am a Stay at Home Mom with a background in Tech Support. Interested in modification projects for Kano and Robomow, as well as Front-end Web Design.</p>
 
 </div>
 <div class='row col-md-8 col-md-offset-2'>
