--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
   
   <div class="container well col-md-10 col-md-offset-1">
     <div class="row text-center">
-     <p><h2>Visit my GitHub Repository at
+     <p>Welcome! This page is used to practice computer programming skills I'm learning at Free Code Camp, Code School, Codecademy, General Assembly and other online web tutorials and code bootcamps. You can also view my 
+     </p>
+     <p class='lead'>GitHub Repository</p><p> at
      <a href="https://github.com/LeahW">GitHub.com/LeahW</a>
-    !</h2></p>
+    </p>
   </div>
 </div>
 <div class="row col-md-12 whitespace"></div>
