--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
   
   <div class="container well col-md-10 col-md-offset-1">
     <div class="row text-center">
-     <p>Welcome! This page is used to practice computer programming skills I'm learning at Free Code Camp, Code School, Codecademy, General Assembly and other online web tutorials and code bootcamps. You can also view my 
-     </p>
-     <p class='lead'>GitHub Repository</p><p> at
+     <p class='lead'>Welcome! This page is used to practice computer programming skills I'm learning at Free Code Camp, Code School, Codecademy, General Assembly and other online web tutorials and code bootcamps. You can also view my 
+       GitHub Repository at
      <a href="https://github.com/LeahW">GitHub.com/LeahW</a>
     </p>
   </div>
