--- a/BWKbot.html
+++ b/BWKbot.html
@@ -9,9 +9,22 @@
 </head>
 <div class="container well col-md-10 col-md-offset-1">
 <p class="lead"> Welcome! </p>
+</div>
+<div class="container well col-md-8 col-md-offset-2">
+  <span class="question1"></span>
+</div>
 <body>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 <script>
+
+function Question(ques, ans, value) {
+  this.ques = ques;
+  this.ans = ans;
+  this.value = value;
+  this.ask = function() { $('.question1').append(ques);
+  };
+  
+  new Question('Is it raining?', 'yes', 5);
 </script>
 </body>
