--- a/BWKbot.html
+++ b/BWKbot.html
@@ -19,18 +19,17 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 <script>
 
-$('.qb1').on('click', function() {
-  
+
 function Question(ques, ans, value) {
   this.ques = ques;
   this.ans = ans;
   this.value = value;
   this.ask = function() { $('.question1').append(ques);
   };
-};
   
+$('.qb1').on('click', function() {
   var Num1 = new Question('Is it raining?', 'yes', 5);
-  Num1.ask;
+  Num1.ask();
 });
   
 </script>
