--- a/BWKbot.html
+++ b/BWKbot.html
@@ -11,8 +11,8 @@
 <p class="lead"> Welcome! </p>
 </div>
 <div class="container well col-md-8 col-md-offset-2">
-<button class="qb1">Question 1: </button>
-  <span class="question1"></span>
+<button class='qb1'>Question 1: </button>
+  <span class='question1'></span>
 </div>
 <body>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
@@ -21,7 +21,7 @@
 
 $('.qb1').on('click', function() {
  $('.question1').append('it works');
-  };
+  });
   
 
  /* var Num1 = new Question('Is it raining?', 'yes', 5);
