--- a/BWKbot.html
+++ b/BWKbot.html
@@ -12,9 +12,10 @@
 </div>
 <div class="container well col-md-8 col-md-offset-2">
 <button class='qb1'>Question 1: </button>
-</div>
+
 <div class="container well col-md-8 col-md-offset-2">
   <span class='question1'></span>
+</div>
 </div>
 <body>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
@@ -25,7 +26,7 @@ $('.qb1').on('click', function() {
 function Question(ques) {
   this.ques = ques;
   this.ask = function() {
-    $('.question1').append(ques+" <br> ");
+    $('.question1').append(ques+"      ");
     $('.question1').append("<button class='ab1'> Yes </button>");
   };
 };
